<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherMyself</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="city_name">WeatherDemo</string>
    <string name="weather_today">今日天气实况</string>
    <string name="weather_query">天气查询</string>
    <string name="left_button">左按钮</string>
    <string name="right_button">右按钮</string>
    <string name="temperature">气温</string>
    <string name="weather_condiction">天气情况</string>
    <string name="wind_direction">风向</string>
    <string name="tomorrow">明天</string>
    <string name="acquired_day">后天</string>

</resources>