<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/top_bg_g_repe"
        android:orientation="vertical"
        android:paddingTop="9dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dip"
            android:text="@string/weather_query"
            android:textColor="#ffffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ws2_ll_yes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/ws2_tv_city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="@string/city_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="10dip"
            android:text="@string/weather_today"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ws2_iv_image"
                    android:layout_width="55dip"
                    android:layout_height="55dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ws2_tv_attr1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/temperature"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/ws2_tv_attr2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/weather_condiction"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/ws2_tv_attr3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="35dip"
                    android:layout_marginTop="10dip"
                    android:text="@string/wind_direction"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/common_line" />

        <!-- 天气 begin -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- 天气1 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/ws2_tv_1_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:gravity="center"
                        android:text="@string/tomorrow"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/ws2_iv_1_image"
                            android:layout_width="45dip"
                            android:layout_height="45dip" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/ws2_tv_1_wd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dip"
                            android:gravity="center"
                            android:text=""
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <!-- 天气2 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/ws2_tv_2_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:gravity="center"
                        android:text="@string/acquired_day"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/ws2_iv_2_image"
                            android:layout_width="45dip"
                            android:layout_height="45dip" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/ws2_tv_2_wd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dip"
                            android:gravity="center"
                            android:text=""
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- 天气 end -->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ws2_ll_no"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/ws2_tv_noresult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BUTTON" />

</LinearLayout>